--- a/views/admin/view-product.ejs
+++ b/views/admin/view-product.ejs
@@ -159,8 +159,8 @@
         <!-- Search and filter -->
 
         <div class="row mb-4 " style="margin-top: 50px;">
-          <div class="col-md-6 " style="margin-left: 50px;">
-             <!-- Centered Search Form -->
+          <!-- <div class="col-md-6 " style="margin-left: 50px;">
+
             <form action="/admin/view-product" method="GET" class="d-inline-flex">
               <input type="text" name="search" class="form-control me-2" placeholder="&nbsp;&nbsp;&nbsp;Search..." value="<%= searchQuery %>">
               <input type="hidden" name="page" value="<%= pagination.page %>">
@@ -169,7 +169,7 @@
           </form>
             
 
-          </div>
+          </div> -->
           <div class="col-md-6" style="margin-top: 20px;">
             <% if (searchQuery) { %>
               <p class="mb-3"><strong>Search Results for:</strong> <%= searchQuery %></p>
