--- a/views/users/orderPlaced.ejs
+++ b/views/users/orderPlaced.ejs
@@ -1,6 +1,12 @@
 <%-include('../layout/header.ejs') %> 
 <%-include('../layout/navigation.ejs')%>
 
+<style>
+  h3 {
+    color: black;
+  }
+</style>
+
 <!-- BREADCRUMB -->
 <div id="breadcrumb" class="section">
   <!-- container -->
@@ -43,5 +49,9 @@
     </div>
   </div>
 </section>
+
+
+   
+
 
 <%-include('../layout/footer.ejs') %>
