--- a/views/admin/adminLayout/header.ejs
+++ b/views/admin/adminLayout/header.ejs
@@ -21,6 +21,18 @@
   <!-- CSS Files -->
   <link id="pagestyle" href="/assets/css/material-dashboard.css?v=3.0.0" rel="stylesheet"/>
   <link rel="stylesheet" href="/assets/css/material-dashboard.css">
+
+  <!-- sweetalert -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <!-- jquary for ajax -->
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+
+
+  <!-- Toastify library -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
 </head>
 
 
