--- a/views/admin/view-coupon.ejs
+++ b/views/admin/view-coupon.ejs
@@ -18,6 +18,12 @@
     text-decoration: none;
   } */
 
+
+
+  .badge {
+    text-decoration: none;
+  }
+
 </style>
 
 <!-- saideNaveBar -->
@@ -227,6 +233,7 @@
     <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
       Launch demo modal
     </button> -->
+    
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
