--- a/views/admin/view-orders.ejs
+++ b/views/admin/view-orders.ejs
@@ -5,6 +5,25 @@
     padding: 12px 20px;
     background-color: rgb(236, 234, 234);
   }
+  
+  .form-control-sm{
+      background-color:rgba(184, 182, 184, 0.336);
+    }
+
+  .col-sm-12{
+    justify-content: center;
+  }
+  .table-row{
+    text-align: center;
+  }
+  /* a.no-underline {
+    text-decoration: none;
+  } */
+
+  .badge {
+    text-decoration: none;
+  }
+
 </style>
 
 <!-- saideNaveBar -->
@@ -120,82 +139,42 @@
             </div>
           </div>
 
-          <!-- Search and filter -->
-
-        <div class="row mt-5 ml-1" style="margin-top: 50px;margin-left: 5px;">
-          <div class="col-md-8 mt-5 ml-1" style="margin-top: 50px;">
-             <!-- Centered Search Form -->
-            <form action="/admin/view-orders" method="GET" class="d-inline-flex" style="width:80%; align-items: baseline;">
-              <input type="text" name="search" class="form-control me-2" placeholder=" Search..." value="<%= searchQuery %>">
-              <input type="hidden" name="page" value="<%= pagination.page %>">
-              <input type="hidden" name="limit" value="<%= pagination.limit %>">
-              <button type="submit" class="btn btn-primary" style="width: 140px;">Search</button>
-          </form>
-            
-
-          </div>
-          <div class="col-md-4">
-            <% if (searchQuery) { %>
-              <p class="mb-3"><strong>Search Results for:</strong> <%= searchQuery %></p>
-    
-            <% } %>
-    
-            <p class="mb-3"><strong>Total Order:</strong> <%= orders.length %></p>
-          </div>
-
-        </div>
-
+      
         <!-- End Search and filter -->
 
           <div class="card-body px-0 pb-2">
             <div class="table-responsive p-0">
-              <table class="table align-items-center mb-4">
-                <thead>
-                  <tr style="background-color: rgb(227, 225, 225);">
-                    <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">No</th>
-                    <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">user Name</th>
-                    <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">Order Date</th>
-                    <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">Quantity</th>
-                    <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">Price</th>
-                    <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">Total Amount</th>
-                    <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">Image</th>
-                    <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">Order Status</th>
-                    <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">Payment Status</th>
-                    <th class="text-uppercase text-xxs font-weight-bolder  ps-2" style="color: black;">Action</th>
-                    
+              <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+                <thead style="background-color: rgb(99, 99, 98);">
+                  <tr>
+                    <th class="th-sm" style="color: white;">No</th>
+                    <th class="th-sm" style="color: white;">User Name</th>
+                    <th class="th-sm" style="color: white;">Order Date</th>
+                    <th class="th-sm" style="color: white;">Quantity</th>
+                    <th class="th-sm" style="color: white;">Price</th>
+                    <th class="th-sm" style="color: white;">Total Amount</th>
+                    <th class="th-sm" style="color: white;">Image</th>
+                    <th class="th-sm" style="color: white;">Order Status</th>
+                    <th class="th-sm" style="color: white;">Payment Status</th>
+                    <th class="th-sm" style="color: white;">Action</th>
                   </tr>
                 </thead>
                 <tbody>
-                    <% if(Array.isArray(orders) && orders.length > 0){%>
-                        <% let count=1%>
-                        <% orders.forEach((data)=>{%>
-                  <tr>
-                    <td>
-                      <p class="text-xs font-weight-bold mb-0"><%=count%></p>
-                    </td>
-                    <td>
-                      <p class="text-xs font-weight-bold mb-0"><%=data.user.name%></p>
-                    </td>
-                    <td>
-                      <p class="text-xs font-weight-bold mb-0"><%=data.orderDetails.date.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-')%></p>
-                    </td>
-                    <td>
-                      <p class="text-xs font-weight-bold mb-0"><%=data.orderDetails.quantity%></p>
-                    </td>
-                    <td>
-                        <p class="text-xs font-weight-bold mb-0">&#x20B9;<%=data.product.price%></p>
-                      </td>
-                      <td>
-                        <p class="text-xs font-weight-bold mb-0">&#x20B9;<%=data.product.price*data.orderDetails.quantity%></p>
-                      </td>
-                    <td>
-                      <img src="/adminAssets/images/<%=data.product.image[0]%>" class="avatar avatar-sm me-3 border-radius-lg" alt="">
-                    </td>
-                    
-                    
-                    <td>
-                      <% if(data.orderDetails && data.orderDetails.orderStatus === 'Placed'){%>
-                      <p class="text-xs text-warning font-weight-bold mb-0">Placed</p>
+                  <% if(Array.isArray(orders) && orders.length > 0){%>
+                    <% let count=1%>
+                    <% orders.forEach((data)=>{%>
+                      <tr>
+                    <td style="text-align: center;"><%=count%></td>
+                    <td style="text-align: center;"><%=data.user.name%></td>
+                    <td style="text-align: center;"><%=data.orderDetails.date.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: '2-digit' }).replace(/\//g, '-')%></td>
+                    <td style="text-align: center;"><%=data.orderDetails.quantity%></td>
+                    <td style="text-align: center;">&#x20B9;<%=data.product.price%></td>
+                    <td style="text-align: center;">&#x20B9;<%=data.product.price*data.orderDetails.quantity%></td>
+                    <td style="text-align: center;"><img src="/adminAssets/images/<%=data.product.image[0]%>" class="avatar avatar-sm me-3 border-radius-lg" alt=""></td>
+
+
+                    <td style="text-align: center;"><% if(data.orderDetails && data.orderDetails.orderStatus === 'Placed'){%>
+                      <p class="text-xs text-info font-weight-bold mb-0">Placed</p>
                     
                     <% }else if(data.orderDetails && data.orderDetails.orderStatus==='Pending') {%>
                       
@@ -218,61 +197,47 @@
                                     <p class="text-xs text-info font-weight-bold mb-0">OutforDelivery</p>
                                   </td>
                                   <% } %>
+                                </td>
 
 
-                                  <!-- paymentStatus -->
-                                  <td>
-                                  <% if(data.orderDetails.paymentStatus==='Success'){%>
-                                    <p class="text-xs text-success font-weight-bold mb-0">Success</p>
+                    <td style="text-align: center;"><% if(data.orderDetails.paymentStatus==='success'){%></td>
+                      <p class="text-xs text-success font-weight-bold mb-0">Success</p>
                                     <% }else if(data.orderDetails.paymentStatus==='Pending'){%>
                                         <p class="text-xs font-weight-bold mb-0">Pending</p>
                                         <% }else if(data.orderDetails.paymentStatus==='Failed'){%>
                                             <p class="text-xs font-weight-bold mb-0">Failed</p>
-                                            <% } %>
-                                  </td>
-                                  <!-- paymentStatus end-->
-                    
-                    <td class=" text-sm">
-                      <a href="/admin/view-ordersDetails?orderId=<%=data.orderDetails._id%>&productId=<%=data.product._id%>">
+                                            <% }else if(data.orderDetails.paymentStatus==='Refund') {%>
+                                              <p class="text-xs font-weight-bold mb-0">Refund</p>
+                                              <% }else if(data.orderDetails.paymentStatus==='Cancelled') {%>
+                                                <p class="text-xs font-weight-bold mb-0">Cancelled</p> %>
+                                                <% } %>
+                                              </td>
+                                              
+                    <td style="text-align: center;"><a href="/admin/view-ordersDetails?orderId=<%=data.orderDetails._id%>&productId=<%=data.product._id%>">
                       <span class="badge badge-sm bg-gradient-danger">Manage</span></a>
                     </td>
                     <% count++ %>
                     <% }); %>
                     <% }else{ %>
                     <td>
-                      <p class="text-xs font-weight-bold mb-0">Order not found</p>
+                      <tr>
+                        <p class="text-xs font-weight-bold mb-0">Order not found</p>
+
+                      </tr>
                     </td>
+                    <td>$675,000</td>
                   </tr>
-                  <% }%>
                 </tbody>
-              </table>
+                <td>
+                  <tr>
+                    <p class="text-xs font-weight-bold mb-0">Order not found</p>
 
-<!-- start pagination -->
-<div class="d-flex justify-content-center">
-  <nav aria-label="Page navigation">
-      <ul class="pagination">
-          <% if (pagination.page > 1) { %>
-              <li class="page-item">
-                  <a class="page-link" href="?page=<%= pagination.page - 1 %>&limit=<%= pagination.limit %>&search=<%= searchQuery %>">Previous</a>
-              </li>
-          <% } %>
-
-          <% for (let i = 1; i <= pagination.totalPages; i++) { %>
-              <li class="page-item <%= i === pagination.page ? 'active' : '' %>">
-                  <a class="page-link" href="?page=<%= i %>&limit=<%= pagination.limit %>&search=<%= searchQuery %>"><%= i %></a>
-              </li>
-          <% } %>
-
-          <% if (pagination.page < pagination.totalPages) { %>
-              <li class="page-item">
-                  <a class="page-link" href="?page=<%= pagination.page + 1 %>&limit=<%= pagination.limit %>&search=<%= searchQuery %>">Next</a>
-              </li>
-          <% } %>
-      </ul>
-  </nav>
-</div>
-<!-- End pagination -->
-
+                  </tr>
+                </td>
+              </tr>
+              <% }%>
+            </tbody>
+          </table>
             </div>
           </div>
         </div>
@@ -280,5 +245,22 @@
     </div>
   </div>
 
+  <!-- Optional JavaScript -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+
+
+<!-- script for Data Table -->
+<script>
+    $(document).ready(function () {
+        $('#dtBasicExample').DataTable({
+            responsive: true
+        });
+        $('.dataTables_length').addClass('bs-select');
+    });
+</script>
 
 <%-include('../admin/adminLayout/footer.ejs')%>
