--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,75 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Project</title>
-
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
-
-	<script src="https://cdn.jsdelivr.net/npm/@dotlottie/player@2.0.0/dist/dotlottie.player.js"></script>
-
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Project</title>
+	
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+		<script src="https://cdn.jsdelivr.net/npm/@dotlottie/player@2.0.0/dist/dotlottie.player.js"></script>
 	
 		<!-- Google font -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
-
+	
 		<!-- Bootstrap -->
-		<link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css"/>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+		
 
 		<!-- Slick -->
 		<link type="text/css" rel="stylesheet" href="/css/slick.css"/>
 		<link type="text/css" rel="stylesheet" href="/css/slick-theme.css"/>
-
+	
 		<!-- nouislider -->
 		<link type="text/css" rel="stylesheet" href="/css/nouislider.min.css"/>
-
+	
 		<!-- Font Awesome Icon -->
-		<link rel="stylesheet" href="/css/font-awesome.min.css">
-		  <!-- Material Icons -->
-		  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-		  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-B8iBAl0Q6/c9eI3ouqUpwNAFV73TkW3xEeHhk2V+oL8GXFe5Vf/PmI2EM8AxW/qdExrkd3hy8n4RXp96W66Yzg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="your-integrity-value" crossorigin="anonymous">
 
+		<!-- Material Icons -->
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+	
 		<!-- Custom stlylesheet -->
 		<link type="text/css" rel="stylesheet" href="/css/style.css"/>
-    	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheets" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+	
 		<style>
 			.header-links {
-			  list-style: none;
-			  margin: 0;
-			  padding: 0;
-			  display: flex;
-			  align-items: center;
+				list-style: none;
+				margin: 0;
+				padding: 0;
+				display: flex;
+				align-items: center;
 			}
-		
+	
 			.dropdown {
-			  position: relative;
-			  display: inline-block;
-			  margin-right: 20px; /* Adjust as needed */
+				position: relative;
+				display: inline-block;
+				margin-right: 20px; /* Adjust as needed */
 			}
-		
+	
 			.dropdown-content {
-			  display: none;
-			  position: absolute;
-			  background-color: #4d4a4a;
-			  min-width: 100px;
-			  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-			  z-index: 1;
+				display: none;
+				position: absolute;
+				background-color: #4d4a4a;
+				min-width: 100px;
+				box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+				z-index: 1;
 			}
-		
+	
 			.dropdown-content a {
-			  padding: 12px 16px;
-			  text-decoration: none;
-			  display: block;
-			  color: #333;
+				padding: 12px 16px;
+				text-decoration: none;
+				display: block;
+				color: #333;
 			}
-		
+	
 			.dropdown-content a:hover {
-			  background-color: #9b9797;
+				background-color: #9b9797;
 			}
-		  </style>
+		</style>
 	</head>
+	
 <body>
     <!-- HEADER -->
 		<header>
@@ -89,14 +87,15 @@
 			<!-- MAIN HEADER -->
 			<div id="header">
 				<!-- container -->
-				<div class="container" style="width: 100%;">
+				<div class="container">
 					<!-- row -->
 					<div class="row">
 						<!-- LOGO -->
 						<div class="col-md-3 ">
-							<div class="header-logo ">
+							<div class="header-logo">
 								<a href="#" class="logo ">
-									<img src="/images/my_Logo.png" alt="" style="width: 50px;" ><h4 style="color: white;">POWER ELECTRICALS</h4>
+									<img src="/images/my_Logo.png" alt="" style="width: 50px;" >
+									<h5 style="color: white;">POWER ELECTRICALS</h5>
 								</a>
 							</div>
 						</div>
@@ -106,11 +105,11 @@
 						<div class="col-md-6">
 							<div class="header-search">
 								<form>
-									<select class="input-select">
+									<!-- <select class="input-select">
 										<option value="0">All Categories</option>
 										<option value="1">Category 01</option>
 										<option value="1">Category 02</option>
-									</select>
+									</select> -->
 									<input class="input" placeholder="Search here" name="search">
 									<button class="search-btn" type="submit">Search</button>
 								</form>
@@ -119,8 +118,8 @@
 						<!-- /SEARCH BAR -->
 
 						<!-- ACCOUNT -->
-							<div class="col-md-3 clearfix">
-								<div class="header-ctn">
+							<div class="col-md-3">
+								<div class="header-ctn" style="display: flex;">
 									<!-- Wishlist -->
 									<div>
 										<a href="#">
@@ -140,8 +139,8 @@
 										</a>
 										
 									</div>
-									<div class="header-links pull-right">
-										<li class="dropdown">
+									<div class="header-links pull-right" style="width: max-content;">
+										<li class="dropdown-log">
 										  <a href="#" class="dropbtn"><i class="fa fa-user-o"></i>
 											<% if (user && user.name) { %>
 											<%= user.name %>
@@ -153,6 +152,8 @@
 											<% if(user){ %>
 											  <a href="/profile"><i class="fa fa-user"></i> Profile</a>
 											  <a href="/orders"><i class="fa fa-archive"></i> Orders</a>
+											  <a href="/coupon"><i class="fa fa-archive"></i> Coupons</a>
+											  <a href="/wallet"><i class="fa fa-archive"></i> Wallet</a>
 											  <a href="/logout"><i class="fa fa-sign-out-alt"></i> Logout</a>
 											<% } else { %>
 											  <a href="/login"><i class="fa fa-sign-in-alt"></i> Login</a>
@@ -176,21 +177,22 @@
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 		<script>
-			$(document).ready(function(){
-			  $(".dropdown").mouseover(function(){
+			$(document).ready(function () {
+			  $(".dropdown-log").mouseover(function () {
 				$(".dropdown-content").show();
-			  }).mouseout(function(){
+			  }).mouseout(function () {
 				$(".dropdown-content").hide();
 			  });
 		  
-			  $(document).on("click", function(event){
+			  $(document).on("click", function (event) {
 				var dropdown = $(".dropdown");
-				if(!dropdown.is(event.target) && dropdown.has(event.target).length === 0){
+				if (!dropdown.is(event.target) && dropdown.has(event.target).length === 0) {
 				  $(".dropdown-content").hide();
 				}
 			  });
 			});
-		</script>
+		  </script>
+		  
 		  
 		
 		
