--- a/views/layout/navigation.ejs
+++ b/views/layout/navigation.ejs
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-B8iBAl0Q6/c9eI3ouqUpwNAFV73TkW3xEeHhk2V+oL8GXFe5Vf/PmI2EM8AxW/qdExrkd3hy8n4RXp96W66Yzg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 		<!-- Bootstrap -->
-		<link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css"/>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 		<!-- Slick -->
 		<link type="text/css" rel="stylesheet" href="/css/slick.css"/>
@@ -24,6 +24,15 @@
 		<!-- Custom stlylesheet -->
 		<link type="text/css" rel="stylesheet" href="/css/style.css"/>
     	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheets" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<style>
+	a{
+		text-decoration: none;
+	}
+
+
+</style>
+
+
 </head>
 <body>
     <!-- NAVIGATION -->
@@ -33,7 +42,7 @@
 				<!-- responsive-nav -->
 				<div id="responsive-nav">
 					<!-- NAV -->
-					<ul class="main-nav nav navbar-nav">
+					<ul class="main-nav nav navbar-nav" style="display: -webkit-box; height: 50px; text-align: center;">
 						<li class="active"><a href="/home">Home</a></li>
 						<!-- <li><a href="#">Hot Deals</a></li> -->
 						<li><a href="#">Categories</a></li>
