--- a/views/users/editAddress.ejs
+++ b/views/users/editAddress.ejs
@@ -7,7 +7,7 @@
       /* margin-top: 20px; */
       color: #1a202c;
       text-align: left;
-      /* background-color: #e2e8f0; */
+      background-color: #e2e8f0;
     }
     .main-body {
       padding: 15px;
@@ -58,6 +58,10 @@
     }
     .shadow-none {
       box-shadow: none !important;
+    }
+
+    h5{
+      color: black;
     }
 
   </style>
@@ -139,7 +143,7 @@
                 class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
               >
               <h5 class="mb-0">
-                <div class='fas fa-gift' ></div><a href=""> Coupons</a>
+                <div class='fas fa-gift' ></div><a href="/coupon"> Coupons</a>
             </h5>
                 <!-- <span class="text-secondary">bootdey</span> -->
               </li>
@@ -156,17 +160,15 @@
         </div>
 <!-- end_sadiBar -->
 
-        <div class="col-md-8">
+        <div class="col-md-6">
             <div class="card mb-3">
               <div class="card-body p-3 mb-5 bg-body rounded">
-                <div class="row">
-                  <div class="col-sm-3 me-3">
+          
                     <h5 style="width: 250px; padding-left: 20px; margin-top: 30px;">BILLING DETAILS</h5>
 
-                    <div class="container mt-5">
+                  
                         <div class="row justify-content-center">
-                            <div class="col-md-6">
-                                <div class="card">
+                   
                                     <div class="card-body">
                                         <form action="" onsubmit="return validateForm()" method="post" id="editAddress">
                                             <!-- Name Input -->
@@ -219,12 +221,7 @@
                                             <input type="hidden" name="id" value="<%=address[0]._id%>">
                                         </form>
                                     </div>
-                                </div>
-                            </div>
                         </div>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
