--- a/views/users/editCheckoutAddress.ejs
+++ b/views/users/editCheckoutAddress.ejs
@@ -34,8 +34,12 @@
                             <input class="input" type="tel" id="mobile" name="mobile" placeholder="Mobile" value="<%=address.mobile%>">
                             <span class="error-message text-danger" id="phoneError"></span>
                         </div>
-                        <button class="btn btn-danger" type="submit">Update</button>
-                        <input type="hidden" name="id" value="<%=address._id%>">
+                        <!-- Submit Button -->
+                        <div class="d-flex justify-content-between" style="display: flex; justify-content: space-around;">
+                            <button type="submit" class="btn btn-primary" style="width: 30%;">Submit</button>
+                            <button type="button" class="btn btn-danger" style="width: 30%;" onclick="cancelAction()">Cancel</button>
+                            <input type="hidden" name="id" value="<%=address._id%>">
+                          </div>
                     </form>
                 </div>
             </div>
@@ -120,6 +124,13 @@
         }
 
         return true; // Form is valid
+    }
+
+    // function Cancel Button  
+    function cancelAction() {
+        
+    // document.getElementById("editAddress").reset();
+    window.history.back(); 
     }
 </script>
 
