--- a/views/users/walletHistory.ejs
+++ b/views/users/walletHistory.ejs
@@ -1,6 +1,7 @@
 <%- include('../layout/header.ejs') %>
-
 <%- include('../layout/navigation.ejs') %>
+
+
 <style type="text/css">
     body {
       /* margin-top: 20px; */
@@ -25,7 +26,7 @@
       background-color: #fff;
       background-clip: border-box;
       border: 0 solid rgba(0, 0, 0, 0.125);
-      border-radius: .5rem;
+      border-radius: 1rem;
     }
 
     .card-body {
@@ -80,11 +81,6 @@
     height: auto; 
   }
 
-  .img-body img {
-    width: 100%; 
-    height: auto; 
-    display: block; 
-  }
   .coupon-details{
     display: flex;
     align-items: center;
@@ -93,36 +89,30 @@
   }
   .Valid-to{
     background-color: aliceblue;
-  }
-  h5, h6{
-    color: black;
-  }
-
-  .fas, .fa-solid{
-    color: black;
+  
   }
   /* .coupon-code{
     display: flex;
     justify-content: center;
   } */
 
+  h5, .fas{
+    color: black;
+  }
+
   </style>
-
-
-
-
 
 <!-- navBar -->
 <div class="container">
     <div class="main-body">
       <nav aria-label="breadcrumb" class="main-breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/home">Home</a></li>
+          <li class="breadcrumb-item"><a href="#">Home</a></li>
           <li class="breadcrumb-item">
             <a href="javascript:void(0)">User</a>
           </li>
           <li class="breadcrumb-item active" aria-current="page">
-            User Profile
+            My Wallet
           </li>
         </ol>
       </nav>
@@ -138,7 +128,7 @@
                   src="/images/person-circle.svg"
                   alt="user"
                   class="rounded-circle"
-                  width="80"
+                  width="100"
                 />
                 <div class="mt-3 ">
                   <h5 style="margin-top: 5px;"><%=user.name%></h5>
@@ -168,7 +158,7 @@
             class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
           >
           <h5 class="mb-0">
-            <div class='fa-solid fa-wallet'></div><a href="/wallet"> My Wallet</a>
+            <div class='fas fa-wallet'></div><a href="/wallet"> My Wallet</a>
         </h5>
             <!-- <span class="text-secondary">bootdey</span> -->
           </li>
@@ -211,84 +201,83 @@
             </ul>
           </div>
         </div>
+      
+
 <!-- end_sadiBar -->
+<div class="col-md-8">
+    <div class="card mb-3">
+        <div class="card-body">
+            <div class="row">
+               
+              <% if (walletHistory.length > 0) { %>
+              <table class="table">
+                        <thead>
+                            <tr>
+                              <th>#</th>
+                              <th>Date</th>
+                              <th>Details</th>
+                              <th>TransactionType</th>
+                              <th>Amount</th>
+                              <th>Current Balance</th>
+                            </tr>
+                        </thead>  
+                        <tbody>
+                            <% let count = 1 %>
+                            <% walletHistory.forEach((data) => { %>
+                                <tr>
+                                    <th scope="row"><%= count %></th>
+                                    <% if(data.transactionDate){%>
+                                    <td><%= data.transactionDate.toLocaleDateString('en-US', { day: 'numeric', month: 'short', year: 'numeric' }) %></td>
+                                    <% }else{%>
+                                      <td>N/A</td>
+                                      <% } %>
+                                    <td><%= data.transactionDetails %></td>
+                                    <td><%= data.transactionType %></td>
+                                    <td><%= data.transactionAmount %></td>
+                                    <td><%= data.currentBalance %></td>
+                                </tr>
+                                <% count++ %>
+                            <% }); %>
+                            <% }else{%>
+                              <div class="text-center">
+                                <h3>No wallet transactions</h3>
+                                <img src="" alt="">
+                                <a href="/product" class="btn btn-primary">continue shopping</a>
+                            </div>
+                            <% } %>
+                            </tbody>
+                    </table>
 
-        <div class="col-md-8">
-          <div class="card mb-3">
-            <div class="card-body">
-              <div class="row">
-                <% if (address.addresses && address.addresses) { %>
-                <div class="col-sm-3">
-                  <h6 class="mb-0">Full Name</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  <%=address.addresses[0].fullName%>
-                </div>
+
+
+                <!-- store bottom filter -->
+                <div class="store-filter clearfix">
+                  <span class="store-qty"></span>
+                  <ul class="store-pagination">
+                  <% for(let i=1;i<=totalPages;i++){%>
+                      <% if(currentPage==i){%>
+                          <li class="active"><a href="?page=<%= i %>"><%= i %></a></li>
+                          <% }else{ %>
+                      <li><a href="?page=<%= i %>"><%= i %></a></li>
+                          <% } %>
+
+                            <% }%>
+            
+                  </ul>
+                  <!-- <i class="fa fa-angle-right"></i> -->
               </div>
-              <!-- <hr /> -->
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0">Email</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                    <%=user.email%>
-                </div>
-              </div>
-              <!-- <hr /> -->
-              <!-- <hr /> -->
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0">Mobile</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  <%=address.addresses[0].mobile%>
-                </div>
-              </div>
-              <!-- <hr /> -->
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0">State</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  <%=address.addresses[0].state%>
-                </div>
-                <!-- <hr /> -->
-                </div>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0">Pincode</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  <%=address.addresses[0].pincode%>
-                </div>
-              </div>
-              <!-- <hr /> -->
-              <% }%>
-              <div class="row">
-                <div class="col-sm-12">
-                  <!-- <a
-                    class="btn btn-danger"
-                    target="__blank"
-                    href="#"
-                    >Edit</a
-                  > -->
-                </div>
-                <img src="	https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/myProfileFooter_4e9fe2.png" alt="">
-              </div>
-             
-        
+              <!-- /store bottom filter -->
+                
             </div>
-          </div>
-          <div class="row gutters-sm">
-              
-
-          </div>
-
         </div>
+    </div>
+</div>
+
       </div>
     </div>
-  </div>
-
-
+</div>
 
 <%- include('../layout/footer.ejs') %>
+
+
+
